--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "firebase": "^9.15.0",
-    "firebase-admin": "^11.4.1"
+    "firebase-admin": "^11.4.1",
+    "firebase-functions": "^4.1.1",
+    "semver": "^7.3.8"
   }
 }
